# svp-video-pipeline

./: CLAUDE.md  README.md
.github/workflows/: ci.yml
svp_pipeline/: .env.example  .gitignore  README.md  pyproject.toml
svp_pipeline/src/svp_pipeline/: __init__.py  cli.py  exceptions.py  pipeline.py
svp_pipeline/src/svp_pipeline/generator/: __init__.py  composite.py  image.py  image_base.py  image_gemini.py  image_openai.py  planner.py  video.py
svp_pipeline/src/svp_pipeline/prompts/: __init__.py  planner_system.md
svp_pipeline/src/svp_pipeline/schema/: __init__.py  svp.py
svp_pipeline/src/svp_pipeline/tools/: __init__.py  archive_to_drive.py
svp_pipeline/src/svp_pipeline/utils/: __init__.py  logging.py  prompt_render.py
svp_pipeline/tests/: conftest.py  test_archive_to_drive.py  test_cli.py  test_composite.py  test_image.py  test_image_factory.py  test_image_gemini.py  test_image_openai.py  test_pipeline.py  test_pipeline_full.py  test_planner.py  test_prompt_render.py  test_schema.py  test_video.py
svp_pipeline/tests/fixtures/: __init__.py  mock_drive.py  mock_fal.py  mock_gemini.py  mock_openai.py  mock_responses.py
svp_pipeline/tests/samples/: action_ninja.json  shibuya_dusk.json  still_life_macro.json
svp_pipeline/tools/: __init__.py  archive_to_drive.py
