[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svp-pipeline"
version = "0.1.0"
description = "SVP Video Pipeline — five-layer video schema and generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/svp_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
