[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svp-pipeline"
version = "0.1.0"
description = "SVP Video Pipeline - five-layer video schema and generation pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "google-genai>=0.3",
    "openai>=1.30",
    "fal-client>=0.5",
    "httpx>=0.27",
    "numpy>=1.26",
    "pillow>=10.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
svp-video = "svp_pipeline.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/svp_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
